[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "flask>=3.1.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "tronpy>=0.6.1",
    "web3>=7.13.0",
]
